# python-poolcop

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
poolcop/: __init__.py  const.py  exceptions.py  poolcop.py
tests/: test_const.py  test_poolcop.py
